   * Added a way to rename local players at game creation
   * Fixed picking the proper locale, the problem only occurred on some
     systems
   * Added a way to compile wesnoth on windows by using CMake + MSVC9.
   * Added more command line arguments for starting a campaign+scenario
   * Added command line "preprocess" to preprocess a specified file/folder and output the result
   * Fixed the ping timeout not waiting for the default ping interval when
     ping timeout is not set to 0
   * Fixed a bug in scoring of AI recall list. Patch by billynux.
   * Strip whitespace characters from .ign patterns (bug #15902)
   * Fixed wesnoth_addon_manager's support for .ign files (bug #15846)
   * When warning the player about installing add-ons with missing dependencies,
     make 'OK' and 'Cancel' work as expected (bug #15960)
   * Fixed tab completion not working in the new lobby (bug #14730)
   * Fixed compilation for g++ 4.5
   * Cleaned up the gui2 code at various places
   * Fixed restoring and saving unit statuses (bug #15889)
   * Don't crash if a [story] [part] [if] misses [then] or [else] (bug #16028)
 * Music and sound effects
   * New version of "Northerners" by Stephen Rozanc (TreizeCouleurs)

Version 1.8.0:
 * AI:
   * Fixed bug #14247: Make formula AI behave correctly if the side has only 1
     potential recruit.
   * Added support for candidate actions written in lua.
 * Campaigns:
   * Descent into Darkness:
     * Added new Giant Rat base frame and animations.
   * Legend of Wesmere:
     * Fixed bug #15631: Scenario 3: arrival of Kalenz failed
     * Fixed bug #15679: Scenario 17: leader of side 2 is missing
     * Fixed bug #15680: Scenario 18: wrong recruitment options
   * Under the Burning Suns:
     * Scenario 2: speed up AI turn.
 * Graphics:
   * Added new Cave Spider and Cuttle Fish graphics
 * Language and i18n:
   * Added new translations: Serbian Ijekavian, Serbian Ijekavian Latin