@@ -60,6 +60,9 @@ under $HOME or "My Documents\\My Games" for windows.
 .B --config-path
 prints the path of the user configuration directory and exits.
 .TP
+.B -datadir <directory>
+overrides the data directory with the one specified
+.TP
 .B -d, --debug
 enables additional command mode options in-game
 (see the wiki page at http://www.wesnoth.org/wiki/CommandMode for more information about command mode).
